--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ exclude:
 
 # Site settings
 title: ROSY group
-subtitle: "Integrating EO with hydrology"
+subtitle: Remote Sensing and Hydrology
 email: jiang08@gmail.com
 name: ljia
-description: >
-  A simple yet classy theme for your Jekyll website or blog.
+description: > # the ">" symbol means to ignore newlines until "footer_text:"
+  Integrating EO with hydrology 
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -22,6 +22,9 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: https://rshydro.org # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
+
+footer_text: >
+  Copyright @ ljia
 
 # Build settings
 markdown: kramdown
