--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: ROSY group
-subtitle: Remote Sensing and Hydrology
+subtitle: Integrating Earth Observation with hydrologic-hydrodynamic models for water resource monitoring and a better understanding of hydrological cycle
 email: jiang08@gmail.com
 name: ljia
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
