--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,10 @@ social:
     share: false
 
   - name: Google Scholar
-    icon: google-scholar
+    icon: google
     username: Liguang Jiang
     url: https://scholar.google.com/citations?user=U1VWFzoAAAAJ&hl=en
+    desc：Follow me on Google Scholar
     share: true
 
 
