--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ social:
     icon: google
     username: Liguang Jiang
     url: https://scholar.google.com/citations?user=U1VWFzoAAAAJ&hl=en
-    desc：Follow me on Google Scholar
+    desc: Follow me on Google Scholar
     share: true
 
 
